# hermitclaw

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
frontend/: index.html  package.json
frontend/src/: App.tsx  GameWorld.tsx  sprites.ts
hermitclaw/: brain.py  config.py  identity.py  main.py  memory.py  prompts.py  providers.py  pysandbox.py  server.py  tools.py
tests/: test_config.py  test_providers.py
